--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,9 @@
 
 @layer base {
     .nav-item {
-        @apply px-4 py-1.5 rounded-full text-white/70 text-sm font-semibold
+        @apply px-4 py-1.5 rounded-full text-white text-sm font-semibold
+    }
+    .hero-ring {
+        @apply absolute inset-0  border-2 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full shadow-[0_0_80px_inset] shadow-white/5 border-white/5;
     }
 }
